fixed 768px responsive title overlap

--- a/src/Header.css
+++ b/src/Header.css
@@ -95,7 +95,7 @@
 }
 
 /* Medium Devices, Desktops */
-@media only screen and (max-width : 992px) {
+@media only screen and (min-width : 992px) {
     .pageTitle {
         font-size:5rem;
         font-family:  'Playfair Display';
